# ADSMPC

./: 1-base.sh  CMakeLists.txt  README.md
crypto/: CMakeLists.txt
crypto/FSS/: CMakeLists.txt  README.md  test.cpp
crypto/FSS/include/api/: api.h
crypto/FSS/include/aux_parameter/: array.h  comms.h  config.h  freekey.h  group_element.h  input_prng.h  keypack.h  prng.h  stats.h  utils.h
crypto/FSS/include/primitives/: dcf.h  dpf.h
crypto/FSS/include/protocol/: GCNConv.h  and.h  clip.h  conv.h  fixtobfloat16.h  float.h  lut.h  mic.h  msnzb.h  mult.h  pubcmp.h  pubdiv.h  relu.h  reluextend.h  relutruncate.h  select.h  signextend.h  taylor.h  truncate.h  wrap.h
crypto/FSS/src/api/: api.cpp
crypto/FSS/src/aux_parameter/: bitpack.cpp  comms.cpp  config.cpp  input_prng.cpp  prng.cpp  stats.cpp  utils.cpp
crypto/FSS/src/primitives/: dcf.cpp  dpf.cpp
crypto/FSS/src/protocol/: GCNConv.cpp  and.cpp  clip.cpp  conv.cpp  fixtobfloat16.cpp  float.cpp  lut.cpp  mic.cpp  msnzb.cpp  mult.cpp  pubcmp.cpp  pubdiv.cpp  relu.cpp  reluextend.cpp  relutruncate.cpp  select.cpp  signextend.cpp  taylor.cpp  truncate.cpp  wrap.cpp
crypto/OT/: ot.h
dataset/CiteSeer/: CiteSeer_A.csv
dataset/Cora/Cora/raw/: graph_data.h
neural_networks/include/: module.h  sequential.h  sequential_gcn.h  tensor.h  train.h  utils.h
neural_networks/include/backend/: FSS_base.h  FSS_base_gcn.h  FSS_extended.h  FSS_improved.h  FSSkey.h  backend.h  baseline_cleartext.h  cleartext.h  float.h
neural_networks/include/datasets/: graph_data.h
neural_networks/include/layers/: layer_gcn.h  layers.h  softmax.h
neural_networks/src/: networks.cpp  random.cpp  train.cpp
neural_networks/src/backend/: baseline_cleartext.cpp  cleartext.cpp  float.cpp
neural_networks/src/datasets/: mnist.cpp
neural_networks/src/layers/: softmax.cpp
tests/: CNN.cpp  GCN.cpp  test_dataset.cpp
